Agrego funcionalidad Carrito, pero no puedo ver los productos agregados aún

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -9,10 +9,10 @@ https://paletadecolores.com.ar/paleta/f9ded3/fdd1b6/fab4b6/c7b6be/89abb4/
     --color-malva: #c7b6be;
     --color-azulado: #89abb4;
 
-    --color1: #5f3711;   /* Más oscuro */
+    --color1: #5f3711;
     --color2:  #d4c098;
     --color3:  #e2d5c1;
     --color4:   #f6f6e2;
-    --color5:#f7f6e4;   /* Más claro */
+    --color5:#f7f6e4;
   }
   
