--- a/src/components/styleProducto.css
+++ b/src/components/styleProducto.css
@@ -1,10 +1,11 @@
+@import "../styles/colors.css";
+
 .card {
   background-color: white;
   width: 250px;
   height: 420px;
-  background-color: white;
-  border-radius: 16px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+  border-radius: 15px;
+  box-shadow: 0 2px 8px var(--color2);
   padding: 16px;
   display: flex;
   flex-direction: column;
@@ -14,10 +15,14 @@
   margin: 12px;
 }
 
+.card:hover {
+  transform: translateY(-5px);
+}
+
 .imgContainer {
   width: 100%;
   height: 180px;
-  background-color: #f0f0f0;
+  background-color: white;
   border-radius: 12px;
   overflow: hidden;
   margin-bottom: 12px;
@@ -36,7 +41,7 @@
 .nombre{
     font-size: 18px;
     font-weight: 600;
-    color: #333333;
+    color: var(--color1);
     margin-bottom: 4px;
     text-align: center;
 
@@ -60,28 +65,18 @@
     align-items: center;
     gap: 8px;
     margin-bottom: 16px;
-}
-
-.qtyButton {
-  background-color: #e0e0e0;
-  border: none;
-  padding: 6px 12px;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 18px;
-  font-weight: 600;
-  transition: background-color 0.2s;
+    color: var(--color2);
 }
 
 .tarjeta {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .btn-agregar {
-  background-color: var(--color2);
-  color: white;
+  background-color: var(--color3);
+  color: var(--color1);
   padding: 10px 16px;
   border: none;
   border-radius: 8px;
@@ -93,6 +88,7 @@
 
 .btn-agregar:hover {
   background-color: var(--color1);
+    color: var(--color3);
 }
 
 .btn-agregar:disabled {
@@ -122,4 +118,3 @@
   background-color: #e5e7eb;
   cursor: not-allowed;
 }
-
