--- a/src/styles/styleEstaticos.css
+++ b/src/styles/styleEstaticos.css
@@ -39,17 +39,17 @@ h1 {
 }
 
 .nav-bar a {
-  color: black;
+  color: var(--color1);
   text-decoration: none;
 }
 
 .footer {
   background-color: var(--color5);
-  padding: 20px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 0px;
   text-align: center;
 }
 
@@ -57,8 +57,8 @@ h1 {
   list-style: none;
   display: flex;
   justify-content: center;
-  gap: 20px;
-  padding: 0;
+  gap: 25px;
+  padding: 0px;
   margin-top: 10px;
 }
 
@@ -82,4 +82,3 @@ h1 {
 .firma {
   color: var(--color2);
 }
-
